--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
+    "moment": "^2.30.1",
     "ngx-daterangepicker-bootstrap": "^18.5.1",
     "ngx-scrollbar": "^13.0.3",
     "rxjs": "~7.8.1",
