--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
               "base": "docs",
               "browser": ""
             },
+            "deleteOutputPath": true,
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": ["@angular/localize/init", "zone.js"],
@@ -36,12 +37,19 @@
             "assets": ["src/favicon.ico", "src/assets", "src/web.config"],
             "styles": ["src/scss/styles.scss"],
             "scripts": [],
-            "allowedCommonJsDependencies": []
+            "allowedCommonJsDependencies": [
+              "moment",
+              "sweetalert2",
+              "dayjs",
+              "dayjs/plugin/localeData",
+              "dayjs/plugin/localizedFormat",
+              "dayjs/plugin/isoWeek",
+              "dayjs/plugin/weekOfYear",
+              "dayjs/plugin/customParseFormat"
+            ]
           },
           "configurations": {
             "production": {
-              "baseHref": "/sabinos-barber-frontend/",
-              "deployUrl": "/sabinos-barber-frontend/",
               "budgets": [
                 {
                   "type": "initial",
@@ -54,7 +62,22 @@
                   "maximumError": "4kb"
                 }
               ],
-              "outputHashing": "all"
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": {
+                "fonts": false,
+                "scripts": true,
+                "styles": true
+              },
+              "outputHashing": "all",
+              "sourceMap": false,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true
             },
             "development": {
               "optimization": false,
