feat: actualizar README con instrucciones de despliegue y agregar .htaccess para configuración del servidor

--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,12 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "preserveSymlinks": true,
-            "assets": ["src/favicon.ico", "src/assets", "src/web.config"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              "src/web.config",
+              "src/.htaccess"
+            ],
             "styles": ["src/scss/styles.scss"],
             "scripts": [],
             "allowedCommonJsDependencies": [
